<resources>
    <string name="app_name">KOU Bilgi Sistemi</string>
    <string name="disclaimer_3rdparty">Kocaeli Üniversitesi\'nden bağımsız olarak yapılmıştır.</string>
    <string name="number">Numara</string>
    <string name="password">Şifre</string>
    <string name="login">GİRİŞ</string>
    <string name="student_name">Öğrenci Adı</string>
    <string name="unknown_person">BİLİNMEYEN KİŞİ</string>
    <string name="unknown_number">123456789</string>
    <string name="unknown_department">BİLİNMEYEN BÖLÜM</string>
    <string name="student_number">Öğrenci Numarası</string>
    <string name="department">Bölüm</string>
    <string name="submenu_grades">NOT BİLGİLERİ</string>
    <string name="submenu_syllabus">DERS PROGRAMI</string>
    <string name="submenu_meals">YEMEKHANE</string>
    <string name="submenu_exam_schedule">SINAV TAKVİMİ</string>
    <string name="submenu_fee_status">HARÇ DURUMU</string>
    <string name="announcements">DUYURULAR</string>
    <string name="submenu_general">GENEL DURUM</string>
    <string name="logging_in">Giriş yapılıyor...</string>
    <string name="submenu_fee_status_term_fee">DÖNEM BORCU</string>
    <string name="submenu_fee_status_paid_amount">ÖDEDİĞİ TUTAR</string>
    <string name="submenu_fee_status_status">DURUM</string>
    <string name="submenu_syllabus_today">BUGÜN</string>
    <string name="submenu_syllabus_class_count">%d ders</string>
    <string name="submenu_syllabus_class_total_time">~%d dakika</string>
    <string name="app_name_short">KOU Bilgi</string>
    <string name="menu_main">Ana Menü</string>
    <string name="menu_sub">Alt Menü</string>
    <string name="settings">Ayarlar</string>
    <string name="messages">Mesajlar</string>
    <string name="submenu_settings">AYARLAR</string>
</resources>
